0022885: Bugfix: else clause applies to the wrong if statement because of missing braces