src/ShapeAnalysis/ShapeAnalysis_CheckSmallFace.cxx
@@ -582,8 +582,10 @@ static Standard_Boolean CheckPoles(const TColgp_Array2OfPnt& poles, Standard_Int
   Standard_Integer i0 = (uorv == 1 ? poles.LowerCol() : poles.LowerRow());
   Standard_Integer i1 = (uorv == 1 ? poles.UpperCol() : poles.UpperRow());
   for (Standard_Integer i = i0; i <= i1-1; i ++) {
-    if (uorv == 1) if(poles(rank,i).IsEqual(poles(rank, i+1), 1e-15)) return Standard_True;
-    else      if(poles(i,rank).IsEqual(poles(i+1,rank), 1e-15)) return Standard_True;
+    if (uorv == 1) {
+      if(poles(rank,i).IsEqual(poles(rank, i+1), 1e-15)) return Standard_True;
+    } else
+      if(poles(i,rank).IsEqual(poles(i+1,rank), 1e-15)) return Standard_True;
   }  
   return Standard_False;
 }
